[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.10" ]

[project]
name = "papis-zotero"
version = "0.2"
description = "Interact with Zotero using papis"
readme = "README.rst"
keywords = [ "bibtex", "biliography", "cli", "management", "papis", "zotero" ]
license = { text = "GPL-3.0-or-later" }
maintainers = [ { name = "Alejandro Gallo", email = "aamsgallo@gmail.com" } ]
authors = [ { name = "Alejandro Gallo", email = "aamsgallo@gmail.com" } ]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [ "papis>=0.14,<0.15" ]

[project.optional-dependencies]
develop = [
    "flake8",
    "flake8-bugbear",
    "flake8-pyproject",
    "flake8-quotes",
    "mypy>=0.7",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "python-coveralls",
    "types-pyyaml",
]

[project.urls]
Repository = "https://github.com/papis/papis-zotero"

[project.entry-points."papis.command"]
zotero = "papis_zotero:main"

[tool.flake8]
select = [ "B", "D", "E", "F", "N", "Q", "W" ]
extend-ignore = [ "B019", "E123", "N818", "W503" ]
max-line-length = 88
inline-quotes = "double"
multiline-quotes = "double"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--cov=papis_zotero",
]
norecursedirs = ".git doc build dist"
python_files = "*.py"
markers = [
    "config_setup: setup for tmp_config",
    "library_setup: setup for tmp_library",
]

[tool.mypy]
strict = true
show_column_numbers = true
hide_error_codes = false
pretty = true
warn_unused_ignores = true
